# apecs

./: .gitattributes  .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  Setup.hs  TODO.md  apecs-physics.cabal  apecs.cabal  cabal-ghc9.project  cabal.project  default.nix  execs.cabal  flake.nix  fourmolu.yaml  hecs.cabal  hie.yaml  paper.org  phycs.cabal  pkgs.nix  shell.nix  stack-older.yaml  stack.yaml  tags
.github/workflows/: CI.yaml
Chipmunk2D/include/chipmunk/: chipmunk_private.h  cpRobust.h  tags
Chipmunk2D/src/: cpHastySpace.c  cpMarch.c  cpPolyShape.c  cpPolyline.c  cpShape.c  cpSpace.c
apecs/: CHANGELOG.md  README.md  apecs.cabal  default.nix
apecs-brillo/: README.md  apecs-brillo.cabal
apecs-brillo/src/Apecs/: Brillo.hs
apecs-brillo/src/Apecs/Physics/: Brillo.hs
apecs-examples/: Shmup.lhs  Simple.hs  apecs-examples.cabal
apecs-gloss/: CHANGELOG.md  README.md  apecs-gloss.cabal  default.nix
apecs-gloss/src/Apecs/: Gloss.hs
apecs-gloss/src/Apecs/Physics/: Gloss.hs
apecs-physics/: CHANGELOG.md  README.md  Setup.hs  TODO.md  apecs-physics.cabal  default.nix
apecs-physics-gloss/: README.md  apecs-physics-gloss.cabal
apecs-physics-gloss/src/Apecs/Physics/: Gloss.hs
apecs-physics/Chipmunk2D/include/chipmunk/: chipmunk_private.h  chipmunk_structs.h
apecs-physics/Chipmunk2D/src/: chipmunk.c  cpArbiter.c  cpArray.c  cpBBTree.c  cpBody.c  cpCollision.c  cpHashSet.c  cpHastySpace.c  cpMarch.c  cpPolyShape.c  cpRobust.c  cpShape.c  cpSimpleMotor.c  cpSpace.c  cpSpaceHash.c  cpSpaceStep.c  cpSweep1D.c
apecs-physics/src/Apecs/: Physics.hs
apecs-physics/src/Apecs/Physics/: Body.hs  Collision.hs  Constraint.hs  Geometry.hs  Query.hs  Shape.hs  Space.hs  Types.hs
apecs-stm/: CHANGELOG.md  README.md  apecs-stm.cabal
apecs-stm/bench/: Main.hs
apecs-stm/src/Apecs/: STM.hs
apecs-stm/src/Apecs/STM/: Prelude.hs
apecs-stm/src/Apecs/Stores/: STM.hs
apecs-stm/test/: Main.hs
apecs/bench/: Main.hs  StoreBench.hs  WorldBench.hs
apecs/examples/: Shmup.lhs  Shmup.md  Simple.hs  apecs-examples.cabal
apecs/src/: Apecs.hs
apecs/src/Apecs/: Callback.hs  Components.hs  Core.hs  Experimental.hs  Reactive.hs  Stores.hs  System.hs  TH.hs  THTuples.hs  Tags.hs  Util.hs
apecs/src/Apecs/Experimental/: ArrayMap.hs  Callback.hs  Children.hs  ChunkStore.hs  Components.hs  Pool.hs  Reactive.hs  Reload.hs  SparseStore.hs  Stores.hs  System.hs  Util.hs
apecs/src/Apecs/Stores/: Cache.hs  Extra.hs  Internal.hs
apecs/src/Apecs/TH/: Tags.hs
apecs/test/: Main.hs
apecs/tutorials/: RTS.md
bench/: Main.hs  benchmark.html
bench-results/: apecs-bench.csv  apecs-bench.html  store-bench.csv  store-bench.html  world-bench.csv  world-bench.html
example/: Main.hs  RTS.hs  Simple.hs
examples/: Chain.hs  Children.hs  ConstraintGallery.hs  Constraints.hs  ECSIntro.hs  HelloWorld.hs  Interactive.hs  LICENSE  Platform.hs  README.md  RTS.hs  ReactiveMap.hs  Shmup.hs  Shmup.lhs  Shmup.md  Simple.hs  StoreInitMonad.hs  Tour.hs  Tumbler.hs  apecs-examples.cabal  default.nix  examples.cabal  stack.yaml
phycs-examples/: Constraints.hs  README.md  phycs-examples.cabal
phycs-gloss/: phycs-gloss.cabal
phycs-gloss/src/Apecs/Physics/: Gloss.hs
spec/: Spec.hs
src/: .Apecs.hs.swp  Apecs.hs  Apecs2.hs  Body.hs  Context.hs  Instances.hs  Lib.hs  Main.hs  Render.hs  Shape.hs  Types.hs  Wrapper.hs
src/Apecs/: .Types.hs.swp  Concurrent.hs  Core.hs  Example.hs  Focus.hs  Loggers.hs  Logs.hs  Physics.hs  Reactive.hs  Slice.hs  Stores.hs  System.hs  TH.hs  THTuples.hs  Types.hs  Util.hs  Vector.hs
src/Apecs/Physics/: Body.hs  Collision.hs  Constraint.hs  Geometry.hs  Query.hs  Render.hs  Shape.hs  Space.hs  Types.hs
src/Control/: ECS.hs
src/Control/ECS/: Core.hs  Immutable.hs  Instances.hs  Mutable.hs  Storage.hs  Types.hs  Vector.hs
src/Control/ECS/Storage/: Immutable.hs  Mutable.hs  STM.hs  SpatialHash.hs  Tuples.hs
test/: Main.hs
tutorials/: ECSBasics.md  GoingFast.md  RTS.md
