name:                apecs
version:             0.4.1.0
homepage:            https://github.com/jonascarpay/apecs#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
category:            Game, Control, Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
synopsis:            Fast ECS framework for game programming
description:
  Apecs is an Entity Component System framework, suitable for high-performance game programming.

source-repository head
  type:     git
  location: git://github.com/jonascarpay/apecs.git

library
  hs-source-dirs:
    src
  exposed-modules:
    Apecs,
    Apecs.Core,
    Apecs.Stores,
    Apecs.System,
    Apecs.Concurrent,
    Apecs.TH,
    Apecs.Util
  other-modules:
    Apecs.THTuples
  default-language:
    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers,
    mtl,
    template-haskell,
    async,
    vector
  ghc-options:
    -Wall
    -Odph

test-suite apecs-test
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    test
  build-depends:
    base >= 4.7 && < 5,
    apecs,
    QuickCheck,
    criterion,
    linear,
    containers,
    vector
  default-language:
    Haskell2010
  ghc-options: -Wall

benchmark apecs-bench
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:
    Main.hs
  build-depends:
    base >= 4.7 && < 5,
    apecs,
    criterion,
    linear
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Odph
    -- LLVM is disabled by default for travis/compatibility reasons
    -- For serious benchmarks, please run with -fllvm
    -- -fllvm
    -optlo-O3
    -threaded
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
