name:                apecs
version:             0.5.1.1
homepage:            https://github.com/jonascarpay/apecs#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
category:            Game, Control, Data
build-type:          Simple
cabal-version:       >=1.10
synopsis:            Fast ECS framework for game programming
description:
  Entity-Component-System frameworks provide a game programming paradigm that tackles many of the shortcomings of a more OO-oriented approach.
  apecs is a type-driven ECS, that leverages strong typing for an expressive DSL that turns into fast game code.

extra-source-files:
  README.md,
  CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/jonascarpay/apecs.git

library
  hs-source-dirs:
    src
  exposed-modules:
    Apecs,
    Apecs.Core,
    Apecs.Stores,
    Apecs.System,
    Apecs.TH,
    Apecs.Util
  other-modules:
    Apecs.THTuples
  default-language:
    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers,
    mtl,
    template-haskell,
    vector
  ghc-options:
    -Wall
    -O2

test-suite apecs-test
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    test
  build-depends:
    base >= 4.7 && < 5,
    apecs,
    QuickCheck,
    criterion,
    linear,
    containers,
    vector
  default-language:
    Haskell2010
  ghc-options: -Wall

benchmark apecs-bench
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:
    Main.hs
  build-depends:
    base >= 4.7 && < 5,
    apecs,
    criterion,
    linear
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -- LLVM is disabled by default for travis/compatibility reasons
    -- For serious benchmarks, please run with -fllvm
    -- -fllvm
    -O2
    -optlo-O3
    -threaded
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
