cabal-version:   2.4
name:            apecs
version:         1.0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2017 Jonas Carpay
category:        Game, Control, Data
tested-with:     GHC ==8.8.3
extra-doc-files:
  CHANGELOG.md
  README.md

common common-options
  build-depends:
    , base  >=4.9.0.0
    , mtl

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Apecs
    Apecs.Core
    Apecs.Example
    Apecs.Focus
    Apecs.Reactive
    Apecs.Stores
    Apecs.System

  build-depends:
    , array
    , containers
    , vector

benchmark apecs-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , apecs
    , criterion
    , linear

  ghc-options:
    -Wall -O2 -optlo-O3 -threaded -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
