name:                execs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jonascarpay/execs#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable execs
  hs-source-dirs:      src
  main-is:
    Main.hs
  other-modules:
    Control.ECS,
    Control.ECS.Core,
    Control.ECS.Immutable,
    Control.ECS.Mutable
  default-language:    Haskell2010

  build-depends:
    base,
    containers,
    mtl,
    criterion,
    hashtables

  ghc-options:
    -O2
    -Wall
    -fno-liberate-case
    -fllvm
    -optlo-O3
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000

  default-extensions:
    TypeOperators,
    TypeFamilies,
    MultiParamTypeClasses,
    FlexibleInstances,
    ScopedTypeVariables,
    StrictData
