name:                execs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jonascarpay/execs#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:
    src
  exposed-modules:
    Control.ECS
  other-modules:
    Control.ECS.Core,
    Control.ECS.Storage,
    Control.ECS.Storage.Mutable,
    Control.ECS.Storage.Immutable
  default-language:
    Haskell2010
  build-depends:
    base,
    containers,
    hashtables,
    mtl,
    vector

  ghc-options:
    -Wall
    -O2
    -fllvm
    -threaded
    -optlo-O3
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000

  default-extensions:
    TypeOperators,
    TypeFamilies,
    MultiParamTypeClasses,
    FlexibleInstances,
    ScopedTypeVariables,
    GeneralizedNewtypeDeriving,
    StrictData

test-suite execs-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    spec
  main-is:
    Spec.hs
  build-depends:
    base, execs, QuickCheck
  default-language:
    Haskell2010

benchmark execs-bench
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:
    Main.hs
  build-depends:
    base, execs, criterion, deepseq
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Odph
    -fllvm
    -optlo-O3
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
    -threaded
