name:                phycs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jonascarpay/phycs#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

flag system-chipmunk
  Description: Use the system-wide installed chipmunk library
  Default:     False

executable phycs
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules: Context, Instances
  build-depends:       base >= 4.7 && < 5, linear, apecs, containers, inline-c, template-haskell, vector
  build-tools: hsc2hs

  if flag(system-chipmunk)
    include-dirs:    /usr/include/chipmunk
    extra-libraries: chipmunk
  else
    include-dirs: Chipmunk2D/include/chipmunk
    c-sources:
      src/Instances.c

      Chipmunk2D/src/chipmunk.c
      Chipmunk2D/src/cpArbiter.c
      Chipmunk2D/src/cpArray.c
      Chipmunk2D/src/cpBBTree.c
      Chipmunk2D/src/cpBody.c
      Chipmunk2D/src/cpCollision.c
      Chipmunk2D/src/cpConstraint.c
      Chipmunk2D/src/cpDampedRotarySpring.c
      Chipmunk2D/src/cpDampedSpring.c
      Chipmunk2D/src/cpGearJoint.c
      Chipmunk2D/src/cpGrooveJoint.c
      Chipmunk2D/src/cpHashSet.c
      Chipmunk2D/src/cpHastySpace.c
      Chipmunk2D/src/cpMarch.c
      Chipmunk2D/src/cpPinJoint.c
      Chipmunk2D/src/cpPivotJoint.c
      Chipmunk2D/src/cpPolyShape.c
      Chipmunk2D/src/cpPolyline.c
      Chipmunk2D/src/cpRatchetJoint.c
      Chipmunk2D/src/cpRobust.c
      Chipmunk2D/src/cpRotaryLimitJoint.c
      Chipmunk2D/src/cpShape.c
      Chipmunk2D/src/cpSimpleMotor.c
      Chipmunk2D/src/cpSlideJoint.c
      Chipmunk2D/src/cpSpace.c
      Chipmunk2D/src/cpSpaceComponent.c
      Chipmunk2D/src/cpSpaceDebug.c
      Chipmunk2D/src/cpSpaceHash.c
      Chipmunk2D/src/cpSpaceQuery.c
      Chipmunk2D/src/cpSpaceStep.c
      Chipmunk2D/src/cpSpatialIndex.c
      Chipmunk2D/src/cpSweep1D.c
