name:                phycs
version:             0.1.0.0
synopsis:            2D game physics and rendering
description:         2D game physics and rendering
homepage:            https://github.com/jonascarpay/phycs#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

flag release
  description: Release mode, better performance but no longer provides debug info on the command line.
  Manual:  True
  default: False

library
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  exposed-modules:
    Apecs.Physics,
    Apecs.Physics.Render
  other-modules:
    Apecs.Physics.Body,
    Apecs.Physics.Constraint,
    Apecs.Physics.Collision,
    Apecs.Physics.Shape,
    Apecs.Physics.Space,
    Apecs.Physics.Types
  build-depends:
    base >= 4.7 && < 5,
    apecs,
    containers,
    gloss,
    inline-c,
    linear,
    random,
    template-haskell,
    vector
  ghc-options:
    -Wall
    -Wno-orphans
    -Wno-unused-do-bind
    -Wno-name-shadowing
  cc-options:
    -std=c99
  if flag(release)
    cc-options: -DNDEBUG
  include-dirs:
    Chipmunk2D/include/chipmunk
  c-sources:
    src/Apecs/Physics/Body.c
    src/Apecs/Physics/Constraint.c
    src/Apecs/Physics/Collision.c
    src/Apecs/Physics/Shape.c
    src/Apecs/Physics/Space.c

    Chipmunk2D/src/chipmunk.c
    Chipmunk2D/src/cpBody.c
    Chipmunk2D/src/cpArbiter.c
    Chipmunk2D/src/cpArray.c
    Chipmunk2D/src/cpBBTree.c
    Chipmunk2D/src/cpCollision.c
    Chipmunk2D/src/cpConstraint.c
    Chipmunk2D/src/cpDampedRotarySpring.c
    Chipmunk2D/src/cpDampedSpring.c
    Chipmunk2D/src/cpGearJoint.c
    Chipmunk2D/src/cpGrooveJoint.c
    Chipmunk2D/src/cpHashSet.c
    Chipmunk2D/src/cpHastySpace.c
    Chipmunk2D/src/cpMarch.c
    Chipmunk2D/src/cpPinJoint.c
    Chipmunk2D/src/cpPivotJoint.c
    Chipmunk2D/src/cpPolyShape.c
    Chipmunk2D/src/cpPolyline.c
    Chipmunk2D/src/cpRatchetJoint.c
    Chipmunk2D/src/cpRobust.c
    Chipmunk2D/src/cpRotaryLimitJoint.c
    Chipmunk2D/src/cpShape.c
    Chipmunk2D/src/cpSimpleMotor.c
    Chipmunk2D/src/cpSlideJoint.c
    Chipmunk2D/src/cpSpace.c
    Chipmunk2D/src/cpSpaceComponent.c
    Chipmunk2D/src/cpSpaceDebug.c
    Chipmunk2D/src/cpSpaceHash.c
    Chipmunk2D/src/cpSpaceQuery.c
    Chipmunk2D/src/cpSpaceStep.c
    Chipmunk2D/src/cpSpatialIndex.c
    Chipmunk2D/src/cpSweep1D.c

executable helloworld
  hs-source-dirs:
    examples
  default-language:
    Haskell2010
  main-is:
    HelloWorld.hs
  build-depends:
    base, phycs
  ghc-options:
    -Wall
    -Wno-orphans
    -Wno-unused-do-bind
    -Wno-name-shadowing

executable tumbler
  main-is:          Tumbler.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  build-depends:    base, phycs, random

executable chain
  main-is:          Chain.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  build-depends:    base, phycs

executable platform
  main-is:          Platform.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  build-depends:    base, phycs

executable interactive
  main-is:          Interactive.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  build-depends:    base, phycs, apecs, random

