name:               apecs-brillo
version:            0.1.0
synopsis:           Simple brillo renderer for apecs
homepage:           https://github.com/jonascarpay/apecs/apecs-brillo
license:            BSD3
license-file:       LICENSE
author:             Jonas Carpay
maintainer:         jonascarpay@gmail.com
copyright:          MIT
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10
description:
  Apecs-gloss but instead it's for brillo.

library
  hs-source-dirs:   src
  exposed-modules:
    Apecs.Brillo
    Apecs.Physics.Brillo

  build-depends:
      apecs          >=0.7  && <0.10
    , apecs-physics  >=0.3  && <0.5
    , base           >=4.9  && <5
    , containers     >=0.5  && <0.8
    , brillo         >= 1.13.3
    , linear         >=1.20 && <2

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/jonascarpay/apecs
