name:                apecs-gloss
version:             0.2.2
synopsis:            Simple gloss renderer for apecs
homepage:            https://github.com/jonascarpay/apecs/apecs-gloss
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

description:
  Simple 2D gloss-based rendering for apecs.
  Intended for prototyping.

library
  hs-source-dirs:
    src
  exposed-modules:
    Apecs.Gloss
    Apecs.Physics.Gloss
  build-depends:
    apecs         >= 0.7  && < 0.9,
    apecs-physics >= 0.3  && < 0.5,
    base          >= 4.9  && < 5,
    containers    >= 0.5  && < 0.8,
    gloss         >= 1.11 && < 2,
    linear        >= 1.20 && < 2
  default-language:
    Haskell2010

source-repository head
  type: git
  location: https://github.com/jonascarpay/apecs
