cabal-version:      2.0
name:               apecs-physics
version:            0.4.6
synopsis:           2D physics for apecs
description:
  2D physics for apecs. Uses Chipmunk physics library under the hood.

homepage:           https://github.com/jonascarpay/apecs#readme
license:            BSD3
license-file:       LICENSE
author:             Jonas Carpay
maintainer:         jonascarpay@gmail.com
copyright:          MIT
category:           Web
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  Chipmunk2D/include/chipmunk/*.h
  Chipmunk2D/src/prime.h
  README.md

source-repository HEAD
  type:     git
  location: git://github.com/jonascarpay/apecs.git

flag release
  description:
    Release mode, better performance but no longer provides debug info on the command line.

  manual:      True
  default:     False

library
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  Apecs.Physics
  other-modules:
    Apecs.Physics.Body
    Apecs.Physics.Collision
    Apecs.Physics.Constraint
    Apecs.Physics.Geometry
    Apecs.Physics.Query
    Apecs.Physics.Shape
    Apecs.Physics.Space
    Apecs.Physics.Types

  build-depends:
      apecs             >=0.7  && <0.10
    , base              >=4.9  && <5
    , containers        >=0.5  && <0.8
    , inline-c          >=0.6  && <1
    , linear            >=1.20 && <2
    , template-haskell  >=2.12 && <3
    , vector            >=0.10 && <0.14

  ghc-options:
    -Wall -O2 -Wno-orphans -Wno-unused-do-bind -Wno-name-shadowing

  cc-options:       -std=c99

  if flag(release)
    cc-options: -DNDEBUG

  include-dirs:     Chipmunk2D/include/chipmunk
  c-sources:
    Chipmunk2D/src/chipmunk.c
    Chipmunk2D/src/cpArbiter.c
    Chipmunk2D/src/cpArray.c
    Chipmunk2D/src/cpBBTree.c
    Chipmunk2D/src/cpBody.c
    Chipmunk2D/src/cpCollision.c
    Chipmunk2D/src/cpConstraint.c
    Chipmunk2D/src/cpDampedRotarySpring.c
    Chipmunk2D/src/cpDampedSpring.c
    Chipmunk2D/src/cpGearJoint.c
    Chipmunk2D/src/cpGrooveJoint.c
    Chipmunk2D/src/cpHashSet.c
    Chipmunk2D/src/cpHastySpace.c
    Chipmunk2D/src/cpMarch.c
    Chipmunk2D/src/cpPinJoint.c
    Chipmunk2D/src/cpPivotJoint.c
    Chipmunk2D/src/cpPolyline.c
    Chipmunk2D/src/cpPolyShape.c
    Chipmunk2D/src/cpRatchetJoint.c
    Chipmunk2D/src/cpRobust.c
    Chipmunk2D/src/cpRotaryLimitJoint.c
    Chipmunk2D/src/cpShape.c
    Chipmunk2D/src/cpSimpleMotor.c
    Chipmunk2D/src/cpSlideJoint.c
    Chipmunk2D/src/cpSpace.c
    Chipmunk2D/src/cpSpaceComponent.c
    Chipmunk2D/src/cpSpaceDebug.c
    Chipmunk2D/src/cpSpaceHash.c
    Chipmunk2D/src/cpSpaceQuery.c
    Chipmunk2D/src/cpSpaceStep.c
    Chipmunk2D/src/cpSpatialIndex.c
    Chipmunk2D/src/cpSweep1D.c
