name:                apecs
version:             0.7.3
homepage:            https://github.com/jonascarpay/apecs#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
category:            Game, Control, Data
build-type:          Simple
cabal-version:       >=1.10
synopsis:            Fast Entity-Component-System library for game programming
description:
  The Entity-Component-System architecture provides an imperative game programming paradigm that tackles many of the shortcomings of more OO-oriented approaches.
  apecs is a type-driven ECS library, that leverages strong typing for an expressive DSL that compiles into fast game code.

extra-source-files:
  README.md,
  CHANGELOG.md

source-repository head
  type:     git
  location: git://github.com/jonascarpay/apecs.git

library
  hs-source-dirs:
    src
  exposed-modules:
    Apecs,
    Apecs.Core,
    Apecs.Components,
    Apecs.Stores,
    Apecs.Stores.Extra,
    Apecs.Reactive,
    Apecs.System,
    Apecs.TH,
    Apecs.Util
  other-modules:
    Apecs.THTuples
  default-language:
    Haskell2010
  build-depends:
    base             >= 4.9  && < 5,
    containers       >= 0.5  && < 0.8,
    mtl              >= 2.2  && < 2.3,
    template-haskell >= 2.12 && < 3,
    vector           >= 0.11 && < 0.13
  ghc-options:
    -Wall

test-suite apecs-test
  type:
    exitcode-stdio-1.0
  main-is:
    Main.hs
  hs-source-dirs:
    test
  build-depends:
    apecs,
    base       >= 4.9  && < 5,
    containers >= 0.5  && < 0.8,
    linear     >= 1.20 && < 2,
    vector     >= 0.10 && < 0.13,
    QuickCheck >= 2.10 && < 3
  default-language:
    Haskell2010
  ghc-options: -Wall

benchmark apecs-bench
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    bench
  main-is:
    Main.hs
  build-depends:
    apecs,
    base      >= 4.9  && < 5,
    criterion >= 1.3  && < 2,
    linear    >= 1.20 && < 2
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2
    -optlo-O3
    -- -fllvm
    -threaded
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
