name:                apecs-examples
version:             0.1.0.0
homepage:            https://github.com/jonascarpay/apecs-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
category:            Game, Control, Data
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable simple
  main-is:
    Simple.hs
  build-depends:
    base, apecs, linear
  default-language:
    Haskell2010
  ghc-options:
    -fno-warn-unused-top-binds

executable rts
  main-is:
    RTS.hs
  build-depends:
    base,
    apecs,
    sdl2,
    random,
    linear
  default-language:
    Haskell2010
  ghc-options:
    -Odph
    -fno-warn-unused-top-binds
