name:                apecs-examples
version:             0.1.0.0
homepage:            https://github.com/jonascarpay/apecs-examples#readme
license:             BSD3
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
category:            Game, Control, Data
build-type:          Simple
cabal-version:       >=1.10

executable simple
  main-is:
    Simple.hs
  build-depends:
    base,
    apecs >= 0.4.0.0,
    linear
  default-language:
    Haskell2010

executable shmup
  main-is:
    Shmup.hs
  build-depends:
    base,
    apecs >= 0.4.0.0,
    linear,
    gloss,
    random
  default-language:
    Haskell2010
