name:                examples
version:             0.1.0.0
homepage:            https://github.com/jonascarpay/apecs/examples#readme
license:             BSD3
license-file:        LICENSE
synopsis:            examples for apecs
description:         Examples for apecs and related libraries
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
category:            Game, Control, Data
build-type:          Simple
cabal-version:       >=1.10

executable simple
  main-is:
    Simple.hs
  build-depends:
    base >= 4.9 && < 5,
    apecs,
    linear
  default-language:
    Haskell2010

executable shmup
  main-is:
    Shmup.lhs
  build-depends:
    base >= 4.9 && < 5,
    apecs,
    apecs-gloss,
    linear,
    random
  default-language:
    Haskell2010
  ghc-options:
    -Wall

executable helloworld
  hs-source-dirs:      .
  main-is:             HelloWorld.hs
  build-depends:
    base >= 4.9 && < 5,
    apecs,
    apecs-physics,
    apecs-gloss,
    gloss
  default-language:    Haskell2010

executable tumbler
  hs-source-dirs:      .
  main-is:             Tumbler.hs
  build-depends:
    base >= 4.9 && < 5,
    apecs,
    apecs-physics,
    apecs-gloss,
    gloss,
    random
  default-language:    Haskell2010

executable constraints
  hs-source-dirs:      .
  main-is:             Constraints.hs
  build-depends:
    base >= 4.9 && < 5,
    apecs,
    apecs-physics,
    apecs-gloss,
    gloss
  default-language:    Haskell2010

