name:          examples
version:       0.1.0.0
homepage:      https://github.com/jonascarpay/apecs/examples#readme
license:       BSD3
license-file:  LICENSE
synopsis:      examples for apecs
description:   Examples for apecs and related libraries
author:        Jonas Carpay
maintainer:    jonascarpay@gmail.com
category:      Game, Control, Data
build-type:    Simple
cabal-version: >=1.10

executable simple
  main-is:          Simple.hs
  build-depends:
      apecs
    , base    >=4.9 && <5
    , linear

  default-language: Haskell2010

executable shmup
  main-is:          Shmup.lhs
  build-depends:
      apecs
    , apecs-gloss
    , base         >=4.9 && <5
    , linear
    , random

  default-language: Haskell2010
  ghc-options:      -Wall

executable helloworld
  hs-source-dirs:   .
  main-is:          HelloWorld.hs
  build-depends:
      apecs
    , apecs-gloss
    , apecs-physics
    , base           >=4.9 && <5
    , gloss

  default-language: Haskell2010

executable tumbler
  hs-source-dirs:   .
  main-is:          Tumbler.hs
  build-depends:
      apecs
    , apecs-gloss
    , apecs-physics
    , base           >=4.9 && <5
    , gloss
    , random

  default-language: Haskell2010

executable constraints
  hs-source-dirs:   .
  main-is:          Constraints.hs
  build-depends:
      apecs
    , apecs-gloss
    , apecs-physics
    , base           >=4.9 && <5
    , gloss

  default-language: Haskell2010
