name:                phycs-examples
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jonascarpay/phycs-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpay
maintainer:          jonascarpay@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable phycs-examples-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , phycs-examples
  default-language:    Haskell2010

test-suite phycs-examples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , phycs-examples
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jonascarpay/phycs-examples
